# bingo

./: .gitignore  app.py  bingo.html  bingo.py  bingo_helpers.py  pyproject.toml  requirements.txt  squares.txt
static/: squares.txt
static/css/: gridstyle.css
templates/: bingo.html  home.html
