[tool.poetry]
name = "f1-bingo"
version = "0.1.0"
description = "Formula 1 Bingo Card Generator"
authors = ["Andy Friedman <afriedman412@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.7"
click = "^8.1.3"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
